--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,7 @@
 <% layout('/layout/welcomePage') -%>
+
+<script>
+    var parking = <%JSON.stringify(parking) %>
+    var freePlacesCounter = <%JSON.stringify(freePlacesCounter) %>
+    //res.json(parking);
+</script>
