--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -1,3 +1,7 @@
+body{
+    min-width: 100%;
+    min-height: 100%;
+}
 div{
     width: 300px;
     height: 100px;
@@ -6,4 +10,8 @@ div{
     color:#0068C4;
     font-family: 'sans-serif';
     font-weight: 700;
+}
+
+#buttons{
+    margin-top:30px;
 }
