--- a/views/mapp.ejs
+++ b/views/mapp.ejs
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script src="http://"></script>
-    <link rel="stylesheet" href="/styles.css"/>
+    <link rel="stylesheet" href="/style/styles.css"/>
+
 </head>
 <body style="height: 600px">
 
@@ -14,10 +16,10 @@
 <div style="height: 40px;">
     <img src="/images/Nev.png">
 </div>
-<div style="height: 30px;">
+<div style="height: 30px; ">
     Количество мест: <span id='spaceCounter'></span>
 </div>
-<div id='buttons' >
+<div id='buttons'  >
     <img src="/images/P.png" style="margin: 10px">
     <img src="/images/Reserve.png" style="margin: 10px">
 </div>
