--- a/views/mapp.ejs
+++ b/views/mapp.ejs
@@ -10,7 +10,7 @@
 </head>
 <body style="height: 600px">
 
-<div style="height: 100px;">
+<div style="height: 100px; margin-top:50px">
     <img src="/images/SMART - PARKING.png">
 </div>
 <div style="height: 40px;">
