--- a/views/mapp.ejs
+++ b/views/mapp.ejs
@@ -4,28 +4,32 @@
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-    <script src="http://"></script>
+    <script src="/eventsHandler.js"></script>
     <link rel="stylesheet" href="/style/styles.css"/>
 
 </head>
-<body style="height: 600px">
+    <body style="height: 600px">
+        <section style="display:none">
+            <div style="height: 100px; margin-top:50px">
+                <img src="/images/SMART - PARKING.png">
+            </div>
+            <div style="height: 40px;">
+                <img src="/images/Nev.png">
+            </div>
+            <div style="height: 30px; ">
+                Количество мест: <span id='spaceCounter'></span>
+            </div>
+            <div id='buttons'  >
+                <img src="/images/P.png"  style="margin: 10px">
+                <img src="/images/Reserve.png" id = 'reserve'style="margin: 10px">
+            </div>
+            <p class="alert" >
+            </p>
 
-<div style="height: 100px; margin-top:50px">
-    <img src="/images/SMART - PARKING.png">
-</div>
-<div style="height: 40px;">
-    <img src="/images/Nev.png">
-</div>
-<div style="height: 30px; ">
-    Количество мест: <span id='spaceCounter'></span>
-</div>
-<div id='buttons'  >
-    <img src="/images/P.png" style="margin: 10px">
-    <img src="/images/Reserve.png" style="margin: 10px">
-</div>
+        </section>
 
-<script>
+        <script>
 
-</script>
-</body>
+        </script>
+    </body>
 </html>
