--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -1,17 +1,27 @@
 body{
     min-width: 100%;
     min-height: 100%;
+    color:#0068C4;
+    text-align:center;
+    font-family: 'sans-serif';
+    font-weight: 700;
 }
+
 div{
     width: 300px;
     height: 100px;
     margin: 0px auto;
     text-align:center;
-    color:#0068C4;
     font-family: 'sans-serif';
     font-weight: 700;
 }
 
 #buttons{
     margin-top:30px;
+}
+#buttons img{
+    cursor: pointer;
+}
+.alert{
+    display: none;
 }
