--- a/views/mapp.ejs
+++ b/views/mapp.ejs
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script src="/eventsHandler.js"></script>
-    <script src="/style/normalize.css"></script>
-
+    <link rel="stylesheet" href="/style/normalize.css"/>
     <link rel="stylesheet" href="/style/styles.css"/>
 
 </head>
