--- a/views/mapp.ejs
+++ b/views/mapp.ejs
@@ -26,6 +26,7 @@
             </div>
             <p class="alert" >
             </p>
+            <p class = 'removeReserve'> Снять бронь </p>
 
         </section>
 
